Update to Java 12